# loan-calculator-app

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
calculator/: amortization.py  math_core.py  scenarios.py
tests/: test_amortization.py  test_math_core.py
ui/: charts.py  metrics_panel.py  sidebar.py
